# regen-therapy-ai

./: .gitignore  README.md
computear-pipeline/: .dockerignore  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  Dockerfile  README.md  README.txt  analyze_wound.py  environment.yml  main.nf  requirements.txt
epigenetic_screen/: README.md  pyproject.toml
epigenetic_screen/configs/: pipeline.yaml
epigenetic_screen/configs/targets/: brd4.yaml  ezh2.yaml  hdac2.yaml
epigenetic_screen/data/raw/: 20250609-L1900-Epigenetics-Compound-Library (1).SDF  compounds.smi
epigenetic_screen/epigenetic_screen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
epigenetic_screen/src/: __init__.py  __main__.py  config.py  main.py
epigenetic_screen/src/admet/: __init__.py  calibrate.py  featurize.py  predict.py
epigenetic_screen/src/chem/: __init__.py  conformers.py  descriptors.py  lipinski.py  pdbqt.py  standardize.py
epigenetic_screen/src/docking/: __init__.py  parse_results.py  receptor.py  vina_runner.py
epigenetic_screen/src/io/: readers.py  writers.py
epigenetic_screen/src/ranking/: __init__.py  aggregate.py  filters.py
epigenetic_screen/src/utils/: logging.py  parallel.py  schemas.py
epigenetic_screen/tests/: test_config.py  test_descriptors.py  test_lipinski.py  test_ranking.py  test_smiles_parsing.py
frontend/: app.py
seggpt-clearer/: architecture.md
wound-cnn-clearer/: Dockerfile  README.md  architecture.md  requirements.txt
(+28 files in other folders)
